# autonomous-python-module-demo

./: README.md  pyproject.toml
.gitea/workflows/: test-sync.yml
src/demo_app/: __init__.py  chatbot.py  greetings.py  math_ops.py
tests/: test_chatbot.py  test_greetings.py  test_math_ops.py
