[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-python-module-demo"
version = "0.1.0"
description = "Fixture repository for autonomous module delivery E2E tests"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
